# kmeans_SandP500

kmeans_for_finance/: .gitignore  pyproject.toml
kmeans_for_finance/backend/: main.py
kmeans_for_finance/data/: Close_df.csv  High_df.csv  Low_df.csv  Open_df.csv  companies.csv
kmeans_for_finance/frontend/: 1_home.py
kmeans_for_finance/frontend/pages/: 2_statistics.py
kmeans_for_finance/functions/: DataClean.py  DataCreation.py  DataPreparation.py
kmeans_for_finance/src/: main.py  train.py
