[tool.poetry]
name = "kmeans-for-finance"
version = "0.1.0"
description = ""
authors = ["martinalon <martinalonsofloresgonzalez@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.0"
yfinance = "^0.2.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
