[tool.poetry]
name = "kmeans-for-finance"
version = "0.1.0"
description = ""
authors = ["martinalon <martinalonsofloresgonzalez@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.0"
yfinance = "^0.2.36"
stqdm = "^0.0.5"
tqdm = "^4.66.2"
unipath = "^1.1"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
streamlit = "^1.32.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
